# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = \
	selenium/by.hpp \
	selenium/desired_capabilities.hpp \
	selenium/exceptions.hpp \
	selenium/selenium.hpp \
	selenium/types.hpp \
	selenium/webdriver.hpp \
	selenium/webelement.hpp \
	selenium/interactions/actions.hpp \
	selenium/interactions/action.hpp \
	selenium/support/color.hpp \
	selenium/support/colors.hpp
